<resources>
    <string name="app_name">MedicalApp</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="your_name">Your Name</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="dl_no">DL No</string>
    <string name="tin_no">Tin No</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="schemes">Schemes</string>
    <string name="no_network">Your network gave up!</string>
    <string name="addCart">Add To Cart</string>
    <string name="title_activity_product_detail">ProductDetail</string>
    <string name="composition">Composition</string>
    <string name="Delete">Remove</string>
    <string name="Edit">Edit</string>
    <string name="Type">Type</string>
    <string name="Quantity">Quantity</string>
    <string name="Expiry">Expiry Date : </string>
    <string name="addScheme">Add Scheme</string>
    <string name="orderId">OrderId :</string>
    <string name="mrp">MRP :</string>
    <string name="placeOrder">Place Order</string>
</resources>
