<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"

    tools:context="base.com.medicalapp.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/splash_image"
            android:layout_height="wrap_content" />



        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/round_corner_gray"
            android:hint="@string/your_mobile_number"
            android:padding="10dp"
            android:id="@+id/phoneNumber"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/round_corner_gray"
            android:hint="@string/password"
            android:padding="10dp"
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:background="@drawable/round_corner_blue"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/loginButton"

            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:background="@drawable/round_corner_blue"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
android:id="@+id/registerButton"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
