<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHeaderContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:id="@+id/productsContainer"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <TextView
            android:text="@string/products"
            style="@style/main_header_style" />

        <TextView
            android:id="@+id/countTextView"
            android:text="2"
            style="@style/header_count_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:id="@+id/schemesContainer"
        android:background="@color/color_gray"
        android:orientation="vertical"
        android:paddingEnd="2dp">


        <TextView
            style="@style/main_header_style"

            android:text="@string/schemes" />

        <TextView
            android:id="@+id/schemesCountTextView"
            style="@style/header_count_style"
            android:text="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:id="@+id/ordersContainer"
        android:background="@color/color_gray"
        android:orientation="vertical"
        android:paddingEnd="2dp">


        <TextView
            style="@style/main_header_style"

            android:text="@string/orders" />

        <TextView
            android:id="@+id/ordersCountTextView"
            style="@style/header_count_style"
            android:text="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/settingContainer"
        android:background="@color/color_gray"
        android:orientation="vertical"
        android:paddingEnd="2dp">


        <TextView
            style="@style/main_header_style"
            android:text="@string/cart" />

        <TextView
            style="@style/main_header_style"

            android:text="" />


    </LinearLayout>


</LinearLayout>
